--- a/client/css/index.css
+++ b/client/css/index.css
@@ -1,18 +1,118 @@
+* {
+	padding: 0;
+	margin: 0;
+	text-decoration: none;
+	list-style: none;
+	box-sizing: border-box;
+}
+
+html {
+	background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+		url(/client/css/yugiohBG.jpg) no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
 h1 {
 	text-align: center;
 }
-
-form {
-	display: table;
+nav {
+	background: #6b83c3;
+	height: 120px;
+	width: 100%;
+}
+#logo {
+	width: 10%;
+	height: auto;
+	margin: 10px;
 }
 
-p {
-	display: table-row;
+nav ul {
+	float: right;
+	margin-right: 20px;
+}
+
+nav ul li {
+	display: inline-block;
+	line-height: 80px;
+	margin: 25px 5px;
+}
+
+nav ul li a {
+	color: white;
+	font-size: 17px;
+	padding: 7px 13px;
+	border-radius: 3px;
+	text-transform: uppercase;
+	font-weight: bold;
+}
+
+a:hover {
+	background: #1b9bff;
+	transition: .4s;
+}
+
+body {
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+fieldset {
+	margin: 2em 0;
+	padding: 1em 2em;
+	border: solid 1px #8b6bc3;
+	background-color: rgba(139, 107, 194, 0.5);
+	border-radius: 6px;
+	min-width: 200px;
+}
+
+legend {
+	font-size: 1.25em;
+	padding: 0 .25em;
+	color: #8b6bc3;
 }
 
 label {
-	display: table-cell;
+	display: block;
+	margin-top: 1em;
+	color: white;
+}
+
+label:first-of-type {
+	margin-top: 0;
+}
+
+input {
+	padding: .5em;
+	border: solid 1px #999;
+}
+
+textarea {
+	min-height: 8em;
+	min-width: 100%;
+	padding: .5em;
+	border: solid 1px #999;
+}
+
+#btn-align {
+	padding: 10px;
+	text-align: center;
+}
+
+#data-submit {
+	font-size: 17px;
+	font-weight: bold;
+	background: #1e90ff;
+	width: 100px;
 	padding: 5px;
+	text-transform: uppercase;
+	color: #fff;
+	border-radius: 5px;
+}
+
+form {
+	margin: 0 auto;
+	width: 500px;
 }
 
 input {
