--- a/client/css/table.css
+++ b/client/css/table.css
@@ -20,7 +20,9 @@ html {
 }
 
 nav {
-	background: #6b83c3;
+	background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(/client/css/egyptianCards.png) no-repeat;
+	background-size: cover;
+	background-position-y: -140px;
 	height: 120px;
 	width: 100%;
 }
@@ -51,16 +53,10 @@ nav ul li a {
 	font-weight: bold;
 }
 
-a:hover {
+li a:hover {
 	background: #1b9bff;
 	transition: .4s;
 }
-
-/* table {
-	width: 50%;
-	border-collapse: collapse;
-	color: white;
-} */
 
 table {
 	position: absolute;
@@ -88,7 +84,7 @@ tr {
 
 th {
 	padding: 5px;
-	background: #ba68c8;
+	background: rgb(107, 128, 195);
 	color: #fafafa;
 	text-transform: uppercase;
 	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
