--- a/client/css/view-yugioh.css
+++ b/client/css/view-yugioh.css
@@ -29,6 +29,11 @@ nav {
 	margin: 10px;
 }
 
+#btn-align {
+	padding: 10px;
+	text-align: center;
+}
+
 nav ul {
 	float: right;
 	margin-right: 20px;
@@ -59,23 +64,16 @@ body {
 }
 
 fieldset {
-	margin: 2em 0;
-	padding: 1em 2em;
+	margin: 5rem 5rem;
+	padding: 1em 1em;
 	border: solid 1px rgb(107, 128, 195);
 	background-color: rgba(107, 128, 195, 0.5);
 	border-radius: 6px;
 	min-width: 200px;
 }
 
-legend {
-	font-size: 1.25em;
-	padding: 0 .25em;
-	color: rgb(107, 128, 195);
-}
-
 label {
 	display: block;
-	margin-top: 1em;
 	color: white;
 }
 
@@ -84,39 +82,12 @@ label:first-of-type {
 	font-size: 1.2em;
 }
 
-input {
-	padding: .5em;
-	border: solid 1px #999;
-}
-
-textarea {
-	min-height: 8em;
-	min-width: 100%;
-	padding: .5em;
-	border: solid 1px #999;
-}
-
-#btn-align {
-	padding: 10px;
-	text-align: center;
-}
-
-#data-submit {
-	font-size: 17px;
+.draw {
+	font-size: 14px;
 	font-weight: bold;
-	background: #1e90ff;
-	width: 100px;
-	padding: 5px;
+	background: skyblue;
+	padding: 10px;
 	text-transform: uppercase;
-	color: #fff;
+	color: black;
 	border-radius: 5px;
-}
-
-form {
-	margin: 0 auto;
-	width: 500px;
-}
-
-input {
-	display: table-cell;
 }
