--- a/client/css/home.css
+++ b/client/css/home.css
@@ -22,7 +22,7 @@ html {
 nav {
 	background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(/client/css/egyptianCards.png) no-repeat;
 	background-size: cover;
-	background-position-y: -140px;
+	background-position-y: 30%;
 	height: 120px;
 	width: 100%;
 }
