--- a/client/css/table.css
+++ b/client/css/table.css
@@ -22,7 +22,7 @@ html {
 nav {
 	background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(/client/css/egyptianCards.png) no-repeat;
 	background-size: cover;
-	background-position-y: -140px;
+	background-position-y: 30%;
 	height: 120px;
 	width: 100%;
 }
@@ -58,18 +58,21 @@ li a:hover {
 	transition: .4s;
 }
 
+#dropDown {
+	margin: 15px;
+}
+
 table {
 	width: 70%;
 	margin-left: auto;
 	margin-right: auto;
-	/* BORDER-RADIUS NOT WORKING */
+	border: solid rgba(182, 220, 255, 0.733) 12px;
 	border-radius: 6px;
 }
 
 th,
 td {
 	padding: 12px 15px;
-	
 }
 
 tr {
@@ -82,11 +85,11 @@ th {
 	color: #fafafa;
 	text-transform: uppercase;
 	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-	
 }
 
 td {
 	font-family: 'Open sans', sans-serif;
+	text-align: center;
 }
 
 tr:nth-child(odd) {
@@ -102,4 +105,45 @@ tr:nth-child(odd) {
 	text-transform: uppercase;
 	color: #fff;
 	border-radius: 5px;
+}
+
+.form {
+	margin: 50px auto;
+	padding: 1em 1em;
+	border: solid 1px rgb(107, 128, 195);
+	background-color: rgba(107, 128, 195, 0.5);
+	border-radius: 6px;
+	width: 50%;
+}
+
+.textArea * {
+	vertical-align: middle;
+}
+
+label {
+	color: white;
+}
+
+label:first-of-type {
+	margin-top: 0;
+	font-size: 1.2em;
+}
+.buttons {
+	display: inline;
+	margin: 12px;
+}
+.btn {
+	display: inline-block;
+	font-size: 14px;
+	font-weight: bold;
+	background: rgb(107, 128, 195);
+	padding: 10px;
+	text-transform: uppercase;
+	color: white;
+	border-radius: 5px;
+}
+
+#btn-align {
+	padding: 10px;
+	text-align: center;
 }
