--- a/client/css/view-yugioh.css
+++ b/client/css/view-yugioh.css
@@ -18,7 +18,7 @@ html {
 nav {
 	background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(/client/css/egyptianCards.png) no-repeat;
 	background-size: cover;
-	background-position-y: -140px;
+	background-position-y: 30%;
 	height: 120px;
 	width: 100%;
 }
@@ -85,9 +85,9 @@ label:first-of-type {
 .draw {
 	font-size: 14px;
 	font-weight: bold;
-	background: skyblue;
+	background: rgb(107, 128, 195);
 	padding: 10px;
 	text-transform: uppercase;
-	color: black;
+	color: white;
 	border-radius: 5px;
 }
